--- a/content/projects/tidyverse_functions/index.Rmd
+++ b/content/projects/tidyverse_functions/index.Rmd
@@ -55,9 +55,7 @@ parsed_tweets <- tweets %>%
 
 write_csv(parsed_tweets, file = "cleaned_tweets_incomplete.csv")
 
-out <- DT::datatable(parsed_tweets)
-
-widgetframe::frameWidget(out)
+knitr::kable(parsed_tweets[1:10,])
 ```
 
 At this point, I realized that I just needed to hand annotate the rest of the tweets, rather than wasting my time trying to parse the rest of the cases. So I pulled everything into Excel and just annotated the ones which I couldn't pull from.
@@ -69,11 +67,8 @@ Here's all of the tweets from this thread (naysayers included). They are in some
 Here's a [link to the cleaned CSV file](cleaned_tweets.csv)
 
 ```{r message=FALSE}
-cleaned_tweets <- read_csv("cleaned_tweets.csv") %>% select(-parent_thread)
-
-out <- DT::datatable(cleaned_tweets)
-
-widgetframe::frameWidget(out)
+cleaned_tweets <- read_csv("cleaned_tweets.csv") %>% select(-parent_thread) 
+knitr::kable(cleaned_tweets)
 ```
 
 ## Top 20 function suggestions
