--- a/content/projects/tidyverse_functions/index.Rmd
+++ b/content/projects/tidyverse_functions/index.Rmd
@@ -116,7 +116,7 @@ cleaned_tweets %>%
   janitor::tabyl(funcs) %>%
   filter(!is.na(funcs)) %>%
   arrange(desc(n)) %>%
-  gt::gt() 
+  knitr::kable()
 ```
 
 
