--- a/content/projects/tidyverse_functions/index.Rmd
+++ b/content/projects/tidyverse_functions/index.Rmd
@@ -70,7 +70,8 @@ Here's a [link to the cleaned CSV file](cleaned_tweets.csv)
 cleaned_tweets <- read_csv("cleaned_tweets.csv") %>% select(-parent_thread) %>%
   mutate(user = paste0("[",user,"](",reply,")")) %>%
   select(-reply)
-knitr::kable(cleaned_tweets)
+
+gt::gt(cleaned_tweets)
 ```
 
 
