--- a/content/projects/tidyverse_functions/index.Rmd
+++ b/content/projects/tidyverse_functions/index.Rmd
@@ -14,7 +14,7 @@ DT::datatable(tweets)
 
 # The Assignment
 
-I'm teaching an R Programming course next term. Jessica Minnier and I are developing the Ready for R Materials into a longer, more involved course.
+I'm teaching an R Programming course next term. Jessica Minnier and I are developing the [Ready for R Materials](https://ready4r.netlify.app/labbook) into a longer, more involved course.
 
 I think one of the most important things is to teach people how to self-learn. So that's the motivation behind the *Tidyverse function of the Week* assignment. 
 
@@ -23,7 +23,9 @@ I asked on Twitter:
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Hi Everyone. I&#39;m teaching an <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> course next quarter. <br><br>One assignment is to have each student write about a <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> function. What it&#39;s for and an example.<br><br>What are some less known <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> functions that do a job you find useful?</p>&mdash; Ted Laderas, PhD 🏳️‍🌈 (@tladeras) <a href="https://twitter.com/tladeras/status/1333480918158254082?ref_src=twsrc%5Etfw">November 30, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
-This was an unexpectedly really fun thread, and lots of recommendations from others. 
+## Wow!
+
+I was bowled over by all of the replies. This was an unexpectedly really fun thread, and lots of recommendations from others. 
 
 I thought I would try and summarize everyone's suggestions and compile a list of recommended functions. I used [this script](https://github.com/gmellini/twitter-scraper) with some modifications to pull all the replies to my tweet. In particular, I had to request for `extended` tweet mode, and I extracted a few more fields from the returned JSON.
 
@@ -71,7 +73,7 @@ cleaned_tweets <- read_csv("cleaned_tweets.csv") %>% select(-parent_thread) %>%
   mutate(user = paste0("[",user,"](",reply,")")) %>%
   select(-reply)
 
-DT::datatable(cleaned_tweets)
+knitr::kable(cleaned_tweets)
 ```
 
 
